package edu.hitsz.prop;

/**
 * @author ding
 */
public class Bomb extends AbstractProp {
    public Bomb(int locationX, int locationY, int speedX, int speedY) {
        super(locationX, locationY, speedX, speedY);
    }
}
