package edu.hitsz.prop;

/**
 * @author ding
 */
public class Bullet extends AbstractProp {
    public Bullet(int locationX, int locationY, int speedX, int speedY) {
        super(locationX, locationY, speedX, speedY);
    }
}