@startuml
'https://plantuml.com/class-diagram

abstract class FlyingObject
{
    # int locationX
    # int locationY
    # int speedX
    # int speedY
    # BufferedImage image
    # int width
    # int height
    # boolean isValid

    + FlyingObject(int locationX, int locationY, int speedX, int speedY)
    + forward():void
    + crash(FlyingObject flyingObject):boolean
    + setLocation(double locationX, double locationY)
    + getLocationX():int
    + getLocationY():int
    + getSpeedY():int
    + getImage():BufferedImage
    + getWidth():int
    + getHeight():int
    + notValid():boolean
    + vanish():void
}
abstract class AbstractAircraft
{
	# int maxHp
    # int hp
    + AbstractAircraft(int locationX, int locationY, int speedX, int speedY, int hp)
    + decreaseHp(int decrease):void
    + getHp():int
    + {abstract} shoot():List<Bullet>
 }

abstract class BaseBullet
{
    - int power
    + BaseBullet(int locationX, int locationY, int speedX, int speedY, int power)
    + forward():void
	+ getPower():int
}

FlyingObject <|-- AbstractAircraft
FlyingObject <|-- BaseBullet
FlyingObject <|-- AbstractProp

AbstractAircraft <|-- HeroAircraft
AbstractAircraft <|-- MobEnemy
AbstractAircraft <|-- EliteEnemy
AbstractAircraft <|-- BossEnemy

BaseBullet <|-- HeroBullet
BaseBullet <|-- EnemyBullet

AbstractProp <|-- Bullet
AbstractProp <|-- Bomb
AbstractProp <|-- Blood

class HeroAircraft {
    - int shootNum
    - int power
    - int direction
    + HeroAircraft(int locationX, int locationY, int speedX, int speedY, int hp)
    + forward():void
    + shoot():List<Bullet>

    + getShootNumber() : int
    + increaseHp(int increase) : void
    + increaseBullet(int bulletNumber) : void

}

class MobEnemy {
    + MobEnemy(int locationX, int locationY, int speedX, int speedY, int hp)
    + forward():void
}

class EliteEnemy{
      - int shootNum
      - int power
      - int direction
      + EliteEnemy(int locationX, int locationY, int speedX, int speedY, int hp)
      + forward():void
}

class BossEnemy{
      - int shootNum
      - int power
      - int direction
      + BossEnemy(int locationX, int locationY, int speedX, int speedY, int hp)
      + forward():void
}

class HeroBullet {
    + HeroBullet(int locationX, int locationY,
     int speedX, int speedY, int power)
}

class EnemyBullet {
    + EnemyBullet(int locationX, int locationY,
     int speedX, int speedY, int power)
}

class AbstractProp {
    + AbstractProp(int locationX, int locationY,
     int speedX, int speedY)
}

class Bullet {
    + Bullet(int locationX, int locationY,
     int speedX, int speedY)
}

class Bomb {
    + Bomb(int locationX, int locationY,
     int speedX, int speedY)
}

class Blood {
    + Health(int locationX, int locationY,
     int speedX, int speedY)
}

@enduml